--- a/Ecos-oraculo/src/app/components/bienvenida/bienvenida.component.html
+++ b/Ecos-oraculo/src/app/components/bienvenida/bienvenida.component.html
@@ -69,7 +69,7 @@
         <!-- Sección superior - Ecos del Oráculo -->
         <div class="hero-section">
           <div class="hero-content">
-            <h1 class="main-title">Ecos del Oráculo</h1>
+            <h1 class="main-title">Ecos del oráculo</h1>
             <p class="description">
               Descubre lo que el Oráculo revela sobre ti.
             </p>
@@ -112,7 +112,7 @@
                 <div class="service-icon">
                   <img src="/Oráculo Servicio (1).svg" alt="Sueños" />
                 </div>
-                <span>Significado de Sueños</span>
+                <span>Significado de sueños</span>
               </div>
             </div>
 
@@ -132,7 +132,7 @@
                 <div class="service-icon">
                   <img src="/Oráculo Servicio (2)-1.svg" alt="Zodiaco" />
                 </div>
-                <span>Información de Zodiaco</span>
+                <span>Información de zodiaco</span>
               </div>
             </div>
 
@@ -152,7 +152,7 @@
                 <div class="service-icon">
                   <img src="/Oráculo Servicio (3).svg" alt="Tarot" />
                 </div>
-                <span>Lectura del Oráculo</span>
+                <span>Lectura del oráculo</span>
               </div>
             </div>
 
@@ -172,7 +172,7 @@
                 <div class="service-icon">
                   <img src="/Oráculo Servicio (4).svg" alt="Numerología" />
                 </div>
-                <span>Lectura de Numerología</span>
+                <span>Lectura de numerología</span>
               </div>
             </div>
 
@@ -192,7 +192,7 @@
                 <div class="service-icon">
                   <img src="/Oráculo Servicio (5).svg" alt="Vocacional" />
                 </div>
-                <span>Mapa Vocacional</span>
+                <span>Mapa vocacional</span>
               </div>
             </div>
 
@@ -212,7 +212,7 @@
                 <div class="service-icon">
                   <img src="/Oráculo Servicio (6).svg" alt="Animal" />
                 </div>
-                <span>Descubre tu Animal Interior</span>
+                <span>Descubre tu animal interior</span>
               </div>
             </div>
 
@@ -232,7 +232,7 @@
                 <div class="service-icon">
                   <img src="/Oráculo Servicio (7).svg" alt="Tabla Nacimiento" />
                 </div>
-                <span>Tabla de Nacimiento</span>
+                <span>Tabla de nacimiento</span>
               </div>
             </div>
 
@@ -275,7 +275,7 @@
                     alt="Calculadora Amor"
                   />
                 </div>
-                <span>Calculadora del Amor</span>
+                <span>Calculadora del amor</span>
               </div>
             </div>
           </div>
