Se agregaron las etiquetas de google tag

--- a/Ecos-oraculo/src/app/components/bienvenida/bienvenida.component.html
+++ b/Ecos-oraculo/src/app/components/bienvenida/bienvenida.component.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bienvenida</title>
     <!-- Google tag (gtag.js) -->
- <!--    <script
+    <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=GT-K5QNXGSM"
-    ></script> -->
-  <!--   <script>
+      src="https://www.googletagmanager.com/gtag/js?id=G-HW2QWG5Z9M"
+    ></script>
+    <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "GT-K5QNXGSM");
-    </script> -->
+
+      gtag("config", "G-HW2QWG5Z9M");
+    </script>
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bienvenida</title>
+
     <!-- Google Tag Manager -->
-   <!--  <script>
+    <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -28,21 +31,21 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-NM5V9XQ2");
-    </script> -->
-    <!-- End Google Tag Manager -->
+      })(window, document, "script", "dataLayer", "GTM-WXHHTDK2");
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
-  <!--   <noscript
+    <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-NM5V9XQ2"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-WXHHTDK2"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
-    ></noscript> -->
-    <!-- End Google Tag Manager (noscript) -->
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="bienvenida-container">
       <!-- Video de fondo -->
       <div class="video-background">
