--- a/Ecos-oraculo/src/app/components/tarot/description/description.component.html
+++ b/Ecos-oraculo/src/app/components/tarot/description/description.component.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-PJDQNK9DX4"
+      src="https://www.googletagmanager.com/gtag/js?id=G-HW2QWG5Z9M"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -14,8 +13,16 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-PJDQNK9DX4");
+      gtag("config", "G-HW2QWG5Z9M");
     </script>
+
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>Document</title>
+
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
@@ -27,65 +34,26 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-59978X4K");
+      })(window, document, "script", "dataLayer", "GTM-WXHHTDK2");
     </script>
     <!-- End Google Tag Manager -->
-
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>Document</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-59978X4K"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-WXHHTDK2"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+    <!-- End Google Tag Manager (noscript) -->
 
     <app-particles class="particles-js"></app-particles>
     <button class="back-home-btn" (click)="volverAlInicio()">
       <i class="fa fa-arrow-left"></i> Volver al inicio
     </button>
-    <!-- <div class="background">
-  <div class="cards-container" [@fadeIn]>
-    <div class="card-description">
-      <div class="cards">
-        <div *ngFor="let card of selectedCards; let i = index" class="card-item">
-          <img [src]="card.src" alt="Carta seleccionada" />
-          <h3>{{ card.name }}</h3>
-        </div>
-      </div>
-      
-      <div class="description-content">
-        <div class="result-page">
-          <h3>Descripción General</h3>
-          <!-- [ngClass]="{ blurred: !isPaid, 'no-select': !isPaid  }" 
-          <div class="scrollable-description" >
-            <p>{{ descriptionsText }}</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="button-container">
-     <!--    <div *ngIf="!isPaid" class="result-container">
-          <button class="call-to-action" (click)="makePayment()">Hacer Pago</button>
-        </div> -->
-    <!-- *ngIf="isPaid" 
-        <div  class="result-container">
-          <button class="call-to-action" id="call-to-action" (click)="showPopup()">Hablar con una maestra</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-
     <div class="background">
       <!-- Efectos de ambiente místico -->
       <div class="mystical-overlay"></div>
