--- a/Ecos-oraculo/src/app/components/calculadora-amor/calculadora-amor.component.html
+++ b/Ecos-oraculo/src/app/components/calculadora-amor/calculadora-amor.component.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=GT-K5QNXGSM"
+      src="https://www.googletagmanager.com/gtag/js?id=G-HW2QWG5Z9M"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -15,8 +12,13 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "GT-K5QNXGSM");
+
+      gtag("config", "G-HW2QWG5Z9M");
     </script>
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
@@ -28,22 +30,21 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-NM5V9XQ2");
+      })(window, document, "script", "dataLayer", "GTM-WXHHTDK2");
     </script>
-    <!-- End Google Tag Manager -->
+    <!-- End Google Tag Manager -->
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-NM5V9XQ2"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-WXHHTDK2"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <!-- Fondo con estrellas animadas -->
+    <!-- End Google Tag Manager (noscript) -->
     <video autoplay muted loop playsinline class="background-video">
       <source src="/CALCULADORA.mp4" type="video/mp4" />
       Tu navegador no soporta videos HTML5.
@@ -288,10 +289,7 @@
 
           <!-- Contenedor del elemento de pago de Stripe -->
           <div class="payment-form-container">
-            <div
-              *ngIf="isProcessingPayment "
-              class="payment-loading"
-            >
+            <div *ngIf="isProcessingPayment" class="payment-loading">
               <mat-spinner diameter="40"></mat-spinner>
               <p>Preparando formulario de pago...</p>
             </div>
@@ -313,7 +311,7 @@
             mat-raised-button
             color="primary"
             (click)="handlePaymentSubmit()"
-            [disabled]="isProcessingPayment "
+            [disabled]="isProcessingPayment"
           >
             <mat-spinner
               *ngIf="isProcessingPayment"
