--- a/Ecos-oraculo/src/app/components/tarot/additional-info/additional-info.component.html
+++ b/Ecos-oraculo/src/app/components/tarot/additional-info/additional-info.component.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-PJDQNK9DX4"
+      src="https://www.googletagmanager.com/gtag/js?id=G-HW2QWG5Z9M"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -14,8 +13,12 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-PJDQNK9DX4");
+      gtag("config", "G-HW2QWG5Z9M");
     </script>
+
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
@@ -27,23 +30,21 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-59978X4K");
+      })(window, document, "script", "dataLayer", "GTM-WXHHTDK2");
     </script>
     <!-- End Google Tag Manager -->
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-59978X4K"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-WXHHTDK2"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
       ></iframe
     ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- End Google Tag Manager (noscript) -->
     <button class="back-home-btn" (click)="volverAlInicio()">
       <i class="fa fa-arrow-left"></i> Volver al inicio
